# leadflow-ai

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  test_classify.json  test_webhook.json
app/: main.py
app/automation/: router.py  schemas.py  service.py
app/core/: auth.py  config.py  db.py  models.py  redis.py
app/extraction/: router.py  schemas.py  service.py
app/leads/: router.py  schemas.py  service.py
app/rag/: chroma.py  router.py  schemas.py  service.py
app/voice/: router.py  schemas.py  service.py
migrations/: env.py
migrations/versions/: 9ceccbe10247_initial_schema.py  e19fb4762e92_initial_schema.py
